# practical-work

./: .gitignore  CMakeLists.txt  README.md
Module-11/: CMakeLists.txt
Module-11/Task-1/: CMakeLists.txt  main.cpp
Module-11/Task-2/: main.cpp
Module-11/Task-3/: main.cpp
Module-11/Task-4/: main.cpp
Module-12/: CMakeLists.txt
Module-12/PracticalWork/: CMakeLists.txt
Module-12/PracticalWork/Task-1/: main.cpp
Module-12/PracticalWork/Task-2/: main.cpp
Module-12/PracticalWork/Task-3/: main.cpp
Module-12/PracticalWork/Task-4/: main.cpp
Module-13/: CMakeLists.txt
Module-13/Task-1/: main.cpp
Module-13/Task-2/: main.cpp  user_input.hpp
Module-13/Task-3/: main.cpp
Module-14/: CMakeLists.txt
Module-14/Task-1/: main.cpp
Module-14/Task-2/: main.cpp
Module-14/Task-3/: main.cpp
Module-14/Task-4/: main.cpp
Module-14/Task-5/: CMakeLists.txt  main.cpp
Module-14/Task-6/: main.cpp  user_input.cpp
Module-14/Task-7/: main.cpp
Module-14/Task-8/: main.cpp
cmake/: utils.cmake
